=====================================================================
	Change Log
	Genmod

	This and other information can be found online at
	http://www.genmod.net/

	# $Id: changelog.txt,v 1.510 2009/05/29 07:43:05 sjouke Exp $
=====================================================================
Version 1.7-patch
- Fixed error in general search, notes (sjouke)
- Fixed marriages don't display in hourglass and family book (sjouke)
- Fixed double privacy checking for link privacy, minor impact (sjouke)
- Fixed break error in session.php (sjouke)
- Fixed error in famlist if name does not exist (sjouke)
- Fixed error in menu if option string contains quotes (sjouke)
- Fixed wrong privacy check for repository title (sjouke)

Version 1.7 final
- Fixed delete person should also delete ASSO pointers from others (sjouke)
- Fixed print relatives in search is broken (sjouke)
- Added moved asso relations to DB eliminating table scans (sjouke) 
- Fixed famlist memory problem on large gedcoms (sjouke)
- Fixed find-select family on indi ID no result (sjouke)
- Added more specific pageheader for indi/famlist (sjouke)
- Fixed soundex search sometimes shows double results (sjouke)
- Fixed select language on config page shows unselected (sjouke)
- Fixed Thisxx menus show non relevant reports (sjouke)
- Added actionlist to reports (sjouke)
- Fixed many layout issues for reports. Some remain. (sjouke)
- Fixed install doesn't check for MySQL strict mode (sjouke)
- Fixed DB definition problems for certain platforms/MySQL versions (sjouke)
- Fixed ahnentafel report should print all marriages (sjouke)
- Added OR support in reports for GMRif tags (sjouke)
- Fixed suppress death text if not died yet in individual report (sjouke)
- Fixed printing of Chinese names in pedigree report (sjouke)
- Fixed familygroup report prints marriage facts of other marriages (sjouke)
- Fixed printing of emailadresses in reports (sjouke)